--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,61 @@
 {
     "cSpell.words": [
+        "Airpods",
+        "Aziz",
+        "blockui",
+        "cascadeselect",
+        "checkmark",
+        "colorpicker",
+        "confirmdialog",
+        "confirmpopup",
+        "Dals",
+        "dynamicdialog",
+        "Farooky",
+        "floatlabel",
+        "Fryums",
         "Gampa",
-        "Kalagura"
+        "Gayathri",
+        "Ghani",
+        "iconfield",
+        "iftalabel",
+        "imagecompare",
+        "inlinemessage",
+        "inplace",
+        "inputchips",
+        "inputgroup",
+        "inputnumber",
+        "inputotp",
+        "Kalagura",
+        "Kalaguragampa",
+        "Kottakal",
+        "Kukatpally",
+        "Masalas",
+        "megamenu",
+        "metergroup",
+        "mytheme",
+        "Nagar",
+        "neteller",
+        "Nordgreen",
+        "orderlist",
+        "organizationchart",
+        "overlaybadge",
+        "panelmenu",
+        "picklist",
+        "productname",
+        "progressspinner",
+        "radiobutton",
+        "Resizer",
+        "scrollpanel",
+        "selectbutton",
+        "speeddial",
+        "steppanel",
+        "steppanels",
+        "tieredmenu",
+        "toggleable",
+        "togglebutton",
+        "toggleswitch",
+        "treeselect",
+        "treetable",
+        "virtualscroller"
     ]
 }
