--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "blockui",
         "cascadeselect",
         "checkmark",
+        "Chilkur",
+        "Chitra",
         "colorpicker",
         "confirmdialog",
         "confirmpopup",
@@ -50,12 +52,14 @@
         "speeddial",
         "steppanel",
         "steppanels",
+        "Telangana",
         "tieredmenu",
         "toggleable",
         "togglebutton",
         "toggleswitch",
         "treeselect",
         "treetable",
+        "Usha",
         "virtualscroller"
     ]
 }
