--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,13 @@
         "Airpods",
         "Aziz",
         "blockui",
+        "cartlist",
         "cascadeselect",
         "checkmark",
         "Chilkur",
         "Chitra",
         "colorpicker",
+        "colour",
         "confirmdialog",
         "confirmpopup",
         "Dals",
@@ -33,6 +35,7 @@
         "Kukatpally",
         "Masalas",
         "megamenu",
+        "Mehandi",
         "metergroup",
         "mytheme",
         "Nagar",
@@ -42,6 +45,7 @@
         "organizationchart",
         "overlaybadge",
         "panelmenu",
+        "Parabens",
         "picklist",
         "productname",
         "progressspinner",
