--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "confirmdialog",
         "confirmpopup",
         "Dals",
+        "Delhivery",
         "dynamicdialog",
         "Farooky",
         "floatlabel",
