--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,7 @@
         "productname",
         "progressspinner",
         "radiobutton",
+        "Rangareddy",
         "Resizer",
         "scrollpanel",
         "selectbutton",
