--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "colour",
         "confirmdialog",
         "confirmpopup",
+        "Cooldown",
         "Dals",
         "Delhivery",
         "dynamicdialog",
