--- a/src/.github/workflows/deploy.yml
+++ b/src/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Angular to GitHub Pages
 on:
   push:
     branches:
-      - master # Change to 'master' if your default branch is 'master'
+      - master  # ✅ Ensure this matches your actual branch name
 
 jobs:
   build:
@@ -22,10 +22,12 @@ jobs:
         run: npm install
 
       - name: Build Angular App
-        run: ng build --configuration=production --output-path docs --base-href "https://aravindnaidu09.github.io/kalaguragampa-angular/"
+        run: |
+          ng build --configuration=production --base-href "/kalaguragampa-angular/"
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: docs # This should match the output directory of your Angular build
+          folder: dist/kalaguragampa-angular # ✅ Ensure this matches the output directory
+          token: ${{ secrets.GITHUB_TOKEN }}
