--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
         "treeselect",
         "treetable",
         "Usha",
-        "virtualscroller"
+        "virtualscroller",
+        "wishliststore"
     ]
 }
