added user-settings navigation & its pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
         "panelmenu",
         "Parabens",
         "picklist",
+        "pincode",
         "productname",
         "progressspinner",
         "radiobutton",
