checkout page details

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
         "Airpods",
+        "Aravind",
         "Aziz",
+        "basti",
+        "Bindu",
         "blockui",
         "cartlist",
         "cascadeselect",
@@ -33,14 +36,19 @@
         "inputotp",
         "Kalagura",
         "Kalaguragampa",
+        "kalapuram",
+        "Kondapur",
         "Kottakal",
         "Kukatpally",
+        "laxmi",
         "Masalas",
         "megamenu",
         "Mehandi",
         "metergroup",
+        "miyapur",
         "mytheme",
         "Nagar",
+        "Naidu",
         "neteller",
         "Nordgreen",
         "orderlist",
@@ -50,6 +58,7 @@
         "Parabens",
         "picklist",
         "pincode",
+        "Prashanth",
         "productname",
         "progressspinner",
         "radiobutton",
