added offline support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
         "Nagar",
         "Naidu",
         "neteller",
+        "ngsw",
         "Nordgreen",
         "orderlist",
         "organizationchart",
