added design changes for apply coupon and tooltip for shipping fee

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "dynamicdialog",
         "Farooky",
         "floatlabel",
+        "FREESHIP",
         "Fryums",
         "Gampa",
         "Gayathri",
