modifications related to orders history page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "steppanels",
         "Telangana",
         "tieredmenu",
+        "titlecase",
         "toggleable",
         "togglebutton",
         "toggleswitch",
