issues resolved related loaders, address, login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Airpods",
         "Aravind",
+        "ayurvedic",
         "Aziz",
         "basti",
         "Bindu",
