--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,9 @@
     ],
     "axe/aria": "off",
     "button-type": "off",
-    "compat-api/css": "off"
+    "compat-api/css": "off",
+    "apple-touch-icons": "off",
+    "manifest-exists": "off",
+    "compat-api/html": "off"
   }
 }
