--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
               "src/styles.scss",
               "src/styles/_mixins.scss",
               "src/styles/_variables.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": []
           },
