--- a/.hintrc
+++ b/.hintrc
@@ -19,6 +19,7 @@
     "compat-api/css": "off",
     "apple-touch-icons": "off",
     "manifest-exists": "off",
-    "compat-api/html": "off"
+    "compat-api/html": "off",
+    "typescript-config/consistent-casing": "off"
   }
 }
