--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,7 @@
         "speeddial",
         "steppanel",
         "steppanels",
+        "sublocality",
         "Telangana",
         "tieredmenu",
         "titlecase",
