--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,13 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
+      "url": "http://localhost:4200/",
+      "webRoot": "${workspaceFolder}",
+      "runtimeArgs": [
+        "--remote-debugging-port=9222"
+      ],
+      "sourceMaps": true,
+      "trace": true
     },
     {
       "name": "ng test",
