fix(checkout page issues): checkout pages has no expire session and also when user tries to refresh the page, the price summary doesn't have anything to show

--- a/.hintrc
+++ b/.hintrc
@@ -20,6 +20,7 @@
     "apple-touch-icons": "off",
     "manifest-exists": "off",
     "compat-api/html": "off",
-    "typescript-config/consistent-casing": "off"
+    "typescript-config/consistent-casing": "off",
+    "meta-viewport": "off"
   }
 }
