--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "blockui",
         "cartlist",
         "cascadeselect",
+        "changefreq",
         "checkmark",
         "Chilkur",
         "Chitra",
@@ -42,6 +43,7 @@
         "Kondapur",
         "Kottakal",
         "Kukatpally",
+        "lastmod",
         "laxmi",
         "Masalas",
         "megamenu",
@@ -81,6 +83,7 @@
         "toggleswitch",
         "treeselect",
         "treetable",
+        "urlset",
         "Usha",
         "virtualscroller",
         "Wishlisted",
