--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^19.0.0",
     "@angular/service-worker": "^19.2.5",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ngneat/until-destroy": "^10.0.0",
     "@ngxs/devtools-plugin": "^19.0.0",
     "@ngxs/logger-plugin": "^19.0.0",
     "@ngxs/storage-plugin": "^19.0.0",
