--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,7 @@
         "Resizer",
         "scrollpanel",
         "selectbutton",
+        "Shiprocket",
         "speeddial",
         "steppanel",
         "steppanels",
