modifications in user specifics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "inputgroup",
         "inputnumber",
         "inputotp",
+        "itemprop",
         "Kalagura",
         "Kalaguragampa",
         "kalapuram",
@@ -49,6 +50,7 @@
         "megamenu",
         "Mehandi",
         "metergroup",
+        "microdata",
         "miyapur",
         "mytheme",
         "Nagar",
